refactored code; removed absolute paths; added Is64Bit check

--- a/goblinRevolver.csproj
+++ b/goblinRevolver.csproj
@@ -80,5 +80,11 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Compiler.exe" />
+    <Content Include="devcon.exe" />
+    <Content Include="devcon64.exe" />
+    <Content Include="Uploader.exe" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
