--- a/goblinRevolver.csproj
+++ b/goblinRevolver.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{9D7D0258-E71E-4A1F-9654-9DC866BF7FC3}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>goblinRevolver</RootNamespace>
-    <AssemblyName>goblinRevolver</AssemblyName>
+    <RootNamespace>RoboReaderAssistant</RootNamespace>
+    <AssemblyName>RoboReaderAssistant</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -69,6 +69,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
