extra bat files and config.conf file

--- a/config.conf
+++ b/config.conf
@@ -1,5 +1,5 @@
 [config-file]
-Instructions=undefined
-Sol Meds=undefined
-Prem Meds=undefined
-Diagnostic=undefined
+Instructions=C:\Users\Armin\Desktop\misc
+SolMeds=C:\Users\Armin\Desktop\Musik
+PremMeds=C:\Users\Armin\Desktop\GOA
+Diagnostic=C:\Users\Armin\.vscode
